# ddaf

./: .gitignore  CHART_SYSTEM.md  CMakeLists.txt  GITHUB_PAGES_SETUP.md  Gemfile  README.md  _config.yml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: pages.yml  validate.yml
assets/css/: charts.css  style.css
assets/js/: chart-data.js  charts-enhanced.js  charts.js  dynamic-charts.js  index.js  main.js
docs/: paper.aux  paper.out  paper.tex  presentation.tex  presentation.vrb  reference_manual.aux  reference_manual.out  reference_manual.tex  reference_manual.toc
examples/: cnn_example.c  transformer_example.c
include/: ddaf.h  ddaf_internal.h
scripts/: bundle-dynamic.js  bundle.js  copy-assets.js
src/architectures/: bigbird_activation.c  cnn_activation.c  gru_activation.c  hierarchical_transformer.c  lstm_activation.c  moe_activation.c  rnn_activation.c  transformer_activation.c
src/core/: activation_base.c  attention_activation.c  data_driven_activation.c  dynamic_activation.c  memory_pool.c  online_activation.c
src/ts/: all-diagrams.ts  chart-data.ts  chart-initializer.ts  chart-renderer.ts  chart-tester.ts  charts.ts  complete-benchmark-renderer.ts  comprehensive-benchmarks.ts  dynamic-charts.ts  index.ts  svg-utils.ts  types.ts
